--- a/src/Winhance.WPF/Features/SoftwareApps/Views/ExternalAppsView.xaml
+++ b/src/Winhance.WPF/Features/SoftwareApps/Views/ExternalAppsView.xaml
@@ -21,28 +21,51 @@
                                         <StackPanel Margin="10">
 
                                             <!-- Selection Checkboxes -->
-                                            <StackPanel Orientation="Horizontal" Margin="15,10,0,10">
-                                                <CheckBox Style="{StaticResource CustomCheckBox}"
-                                                          Content="{loc:Localize Common_SelectAll}"
-                                                          FontSize="16"
-                                                          FontWeight="Bold"
-                                                          IsChecked="{Binding IsAllSelected}"
-                                                          Margin="0,0,20,0"/>
+                                            <Grid Margin="15,10,0,10">
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                                                    <CheckBox Style="{StaticResource CustomCheckBox}"
+                                                              Content="{loc:Localize Common_SelectAll}"
+                                                              FontSize="16"
+                                                              FontWeight="Bold"
+                                                              IsChecked="{Binding IsAllSelected}"
+                                                              Margin="0,0,20,0"/>
 
-                                                <CheckBox Style="{StaticResource CustomCheckBox}"
-                                                          Content="{loc:Localize Common_SelectAll_Installed}"
-                                                          FontSize="16"
-                                                          FontWeight="Bold"
-                                                          IsChecked="{Binding IsAllSelectedInstalled}"
-                                                          Margin="0,0,20,0"/>
+                                                    <CheckBox Style="{StaticResource CustomCheckBox}"
+                                                              Content="{loc:Localize Common_SelectAll_Installed}"
+                                                              FontSize="16"
+                                                              FontWeight="Bold"
+                                                              IsChecked="{Binding IsAllSelectedInstalled}"
+                                                              Margin="0,0,20,0"/>
 
-                                                <CheckBox Style="{StaticResource CustomCheckBox}"
-                                                          Content="{loc:Localize Common_SelectAll_NotInstalled}"
-                                                          FontSize="16"
-                                                          FontWeight="Bold"
-                                                          IsChecked="{Binding IsAllSelectedNotInstalled}"
-                                                          Margin="0,0,0,0"/>
-                                            </StackPanel>
+                                                    <CheckBox Style="{StaticResource CustomCheckBox}"
+                                                              Content="{loc:Localize Common_SelectAll_NotInstalled}"
+                                                              FontSize="16"
+                                                              FontWeight="Bold"
+                                                              IsChecked="{Binding IsAllSelectedNotInstalled}"
+                                                              Margin="0,0,0,0"/>
+                                                </StackPanel>
+
+                                                <Border Background="#FFF3CD"
+                                                        BorderBrush="#FFAA00"
+                                                        BorderThickness="1"
+                                                        CornerRadius="4"
+                                                        Padding="10,6"
+                                                        HorizontalAlignment="Right"
+                                                        Visibility="{Binding ShowWinGetUnavailableBanner, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock Text="⚠"
+                                                                   FontSize="14"
+                                                                   Margin="0,0,8,0"
+                                                                   VerticalAlignment="Center"
+                                                                   Foreground="#856404"/>
+                                                        <TextBlock Text="{Binding WinGetUnavailableMessage}"
+                                                                   FontSize="12"
+                                                                   VerticalAlignment="Center"
+                                                                   Foreground="#856404"
+                                                                   TextWrapping="Wrap"/>
+                                                    </StackPanel>
+                                                </Border>
+                                            </Grid>
 
                                             <ItemsControl ItemsSource="{Binding Categories}">
                                                 <ItemsControl.ItemTemplate>
